# password-manager

./: .env  Cargo.toml  index.html  scripts.js  styles.css
src/: crypto.rs  main.rs  models.rs  schema.rs
