[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
diesel = { version = "2.1.4", features = ["postgres"] }
dotenv = "0.15.0"
postgres = "0.19.7"
aes-gcm = "0.10.3"
rand = "0.8.5"
aead = "0.5.2"
r2d2 = "0.8.10"